--- a/notes.tex
+++ b/notes.tex
@@ -34,11 +34,19 @@ t[...] for tags
 t[priorety unsorted] or t[pu]-- not sorted in priorety yet
 
 \section{doing}
-\subsection{add bath}
-created on Fri Jan  3 21:07:00 PST 2014
-\label{sub:add_bath}
-follow steve's code to add bath
-% subsection add_bath (end)
+\subsection{add bath to ham and eom}
+created on Sat Jan 11 12:01:18 PST 2014
+\label{sub:add_bath_to_ham_and_eom}
+\begin{itemize}
+  \item \done changed intput variables to parameters structure
+  \item add ham
+    \begin{itemize}
+      \item \done bath's ham checks with steve's
+      \item \done ham
+    \end{itemize}
+  \item \done add eom
+\end{itemize}
+% subsection add_bath_to_ham_and_eom (end)
 \section{to do}
 \subsection{ask steve about coupling}
 \label{sub:ask_steve_about_coupling}
@@ -52,6 +60,15 @@ in the file harmonic.h++, why is there a line \verb`if( n <= 0 ) return 0;`
 \section{to do priority unsorted}
 \section{plan}
 \section{past}
+\subsection{add bath sampling}
+created on Fri Jan  3 21:07:00 PST 2014
+\label{sub:add_bath}
+adding weigner sampling
+\begin{itemize}
+  \item \done follow steve's code to add bath
+  \item \done check with my previous code
+\end{itemize}
+% subsection add_bath (end)
 \subsection{plot n1 and r}
 done: Mon Jan  6 11:48:28 PST 2014
 created on Fri Jan  3 21:04:31 PST 2014
