--- a/notes.tex
+++ b/notes.tex
@@ -34,19 +34,16 @@ t[...] for tags
 t[priorety unsorted] or t[pu]-- not sorted in priorety yet
 
 \section{doing}
-\subsection{add bath to ham and eom}
-created on Sat Jan 11 12:01:18 PST 2014
-\label{sub:add_bath_to_ham_and_eom}
-\begin{itemize}
-  \item \done changed intput variables to parameters structure
-  \item add ham
-    \begin{itemize}
-      \item \done bath's ham checks with steve's
-      \item \done ham
-    \end{itemize}
-  \item \done add eom
-\end{itemize}
-% subsection add_bath_to_ham_and_eom (end)
+\subsection{scale time}
+created on Wed Jan 15 11:37:35 PST 2014
+\label{sub:scale_time}
+
+% subsection scale_time (end)
+\subsection{subsection name}
+created on Wed Jan 15 11:37:48 PST 2014
+\label{sub:subsection_name}
+
+% subsection subsection_name (end)
 \section{to do}
 \subsection{ask steve about coupling}
 \label{sub:ask_steve_about_coupling}
@@ -59,7 +56,21 @@ in the file harmonic.h++, why is there a line \verb`if( n <= 0 ) return 0;`
 % subsection if_n_0_ask_steve (end)
 \section{to do priority unsorted}
 \section{plan}
-\section{past}
+\section{past} %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{add bath to ham and eom}
+done Sun Jan 12 12:18:20 PST 2014
+created on Sat Jan 11 12:01:18 PST 2014
+\label{sub:add_bath_to_ham_and_eom}
+\begin{itemize}
+  \item \done changed intput variables to parameters structure
+  \item \done add ham
+    \begin{itemize}
+      \item \done bath's ham checks with steve's
+      \item \done ham
+    \end{itemize}
+  \item \done add eom
+\end{itemize}
+% subsection add_bath_to_ham_and_eom (end)
 \subsection{add bath sampling}
 created on Fri Jan  3 21:07:00 PST 2014
 \label{sub:add_bath}
